sets next steps

--- a/8_debugging_the_basic_stacking_model.ipynb
+++ b/8_debugging_the_basic_stacking_model.ipynb
@@ -344,9 +344,72 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DebuggingBasicStacking(ProblemTransformationBase):\n",
+    "    first_layer_classifiers: BinaryRelevance\n",
+    "    second_layer_classifiers: BinaryRelevance\n",
+    "\n",
+    "    def __init__(self, classifier: Any = None, require_dense: Optional[List[bool]] = None):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.first_layer_classifiers = BinaryRelevance(\n",
+    "            classifier=SVC(),\n",
+    "            require_dense=[False, True]\n",
+    "        )\n",
+    "\n",
+    "        self.second_layer_classifiers = BinaryRelevance(\n",
+    "            classifier=SVC(),\n",
+    "            require_dense=[False, True]\n",
+    "        )\n",
+    "    \n",
+    "    def fit(self, X: Any, y: Any):\n",
+    "        print(f\"X shape is {X.shape}\")\n",
+    "        self.first_layer_classifiers.fit(X, y)\n",
+    "\n",
+    "        first_layer_predictions = self.first_layer_classifiers.predict(X)\n",
+    "        X_expanded = np.hstack([X.todense(), first_layer_predictions.todense()])\n",
+    "\n",
+    "        print(f\"X_extended shape is {X_expanded.shape}\")\n",
+    "        self.second_layer_classifiers.fit(X_expanded, y)\n",
+    "    \n",
+    "    def predict(self, X: Any):\n",
+    "        print(f\"PREDICT: X shape is {X.shape}\")\n",
+    "        first_layer_predictions = self.first_layer_classifiers.predict(X)\n",
+    "        X_expanded = np.hstack([X.todense(), first_layer_predictions.todense()])\n",
+    "        print(f\"PREDICT: X_extended shape is {X_expanded.shape}\")\n",
+    "        return self.second_layer_classifiers.predict(X_expanded)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X shape is (1211, 294)\n",
+      "X_extended shape is (1211, 300)\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = DebuggingBasicStacking()\n",
+    "m.fit(datasets[\"scene\"][\"X_train\"], datasets[\"scene\"][\"y_train\"])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "* NEXT STEP: check if the base model, the SVC(), is really being trained with all the new features. \n",
+    "* NEXT STEP: check if the new features have values."
+   ]
   }
  ],
  "metadata": {
