some more tests

--- a/8_debugging_the_basic_stacking_model.ipynb
+++ b/8_debugging_the_basic_stacking_model.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -399,17 +399,128 @@
     }
    ],
    "source": [
+    "# first test\n",
+    "# m = DebuggingBasicStacking()\n",
+    "# m.fit(datasets[\"scene\"][\"X_train\"], datasets[\"scene\"][\"y_train\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X shape is (1211, 294)\n",
+      "X_extended shape is (1211, 300)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# second test\n",
+    "\n",
     "m = DebuggingBasicStacking()\n",
     "m.fit(datasets[\"scene\"][\"X_train\"], datasets[\"scene\"][\"y_train\"])"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "first layer\n",
+      "294\n",
+      "294\n",
+      "294\n",
+      "294\n",
+      "294\n",
+      "294\n",
+      "second layer\n",
+      "300\n",
+      "300\n",
+      "300\n",
+      "300\n",
+      "300\n",
+      "300\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"first layer\")\n",
+    "for clf in m.first_layer_classifiers.classifiers_:\n",
+    "    print(clf.n_features_in_)\n",
+    "\n",
+    "print(\"second layer\")\n",
+    "for clf in m.second_layer_classifiers.classifiers_:\n",
+    "    print(clf.n_features_in_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* NEXT STEP: check if the base model, the SVC(), is really being trained with all the new features. \n",
-    "* NEXT STEP: check if the new features have values."
+    "### First test: check shape of the features (shape of X)\n",
+    "\n",
+    "A few `print`s were added to the code to revel the shape of `X`, both at the first layer and at the second layer. Result:\n",
+    "\n",
+    "```\n",
+    "X shape is (1211, 294)\n",
+    "X_extended shape is (1211, 300)\n",
+    "```\n",
+    "\n",
+    "**So, the second layer is indeed receiving more features than the first layer. This is good.**\n",
+    "\n",
+    "### Second test: check if the base classifier itself is being trained with the new features\n",
+    "\n",
+    "The existing properties being set by `BinaryRelevance` already make it possible to investigate each classifier of either the first or the second layer.\n",
+    "\n",
+    "The property `n_features_in`, from the [SVC](https://scikit-learn.org/stable/modules/generated/sklearn.svm.SVC.html), inform how many features were observed during `fit()`. This is the property we are going to use to check if the base classifiers are being trained with the new features.\n",
+    "\n",
+    "```\n",
+    "first layer\n",
+    "294\n",
+    "294\n",
+    "294\n",
+    "294\n",
+    "294\n",
+    "294\n",
+    "second layer\n",
+    "300\n",
+    "300\n",
+    "300\n",
+    "300\n",
+    "300\n",
+    "300\n",
+    "```\n",
+    "\n",
+    "**The base classifiers from the second layer are really receiving all the new features. This is good.**\n",
+    "\n",
+    "### Third test: check if the new features have values\n",
+    "\n",
+    "...\n",
+    "\n",
+    "### Fourth test: attempt to use `Stacking` from scikit to reimplement the `BasicStacking`\n",
+    "\n",
+    "..."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
