conducts third test

--- a/8_debugging_the_basic_stacking_model.ipynb
+++ b/8_debugging_the_basic_stacking_model.ipynb
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,19 +367,29 @@
     "        )\n",
     "    \n",
     "    def fit(self, X: Any, y: Any):\n",
-    "        print(f\"X shape is {X.shape}\")\n",
+    "        print(f\"FIT: X shape is {X.shape}\")\n",
     "        self.first_layer_classifiers.fit(X, y)\n",
     "\n",
     "        first_layer_predictions = self.first_layer_classifiers.predict(X)\n",
-    "        X_expanded = np.hstack([X.todense(), first_layer_predictions.todense()])\n",
+    "        formatted_first_layer_predictions = first_layer_predictions.todense()\n",
+    "        X_expanded = np.hstack([X.todense(), formatted_first_layer_predictions])\n",
     "\n",
-    "        print(f\"X_extended shape is {X_expanded.shape}\")\n",
+    "        # print(\"FIT: These are the extra features:\", formatted_first_layer_predictions)\n",
+    "        print(\"FIT: Summing the values:\", np.sum(np.sum(formatted_first_layer_predictions, axis=1)))\n",
+    "\n",
+    "        print(f\"FIT: X_extended shape is {X_expanded.shape}\")\n",
     "        self.second_layer_classifiers.fit(X_expanded, y)\n",
     "    \n",
-    "    def predict(self, X: Any):\n",
+    "    def predict(self, X: Any): # type: ignore\n",
     "        print(f\"PREDICT: X shape is {X.shape}\")\n",
     "        first_layer_predictions = self.first_layer_classifiers.predict(X)\n",
-    "        X_expanded = np.hstack([X.todense(), first_layer_predictions.todense()])\n",
+    "        formatted_first_layer_predictions = first_layer_predictions.todense()\n",
+    "\n",
+    "        X_expanded = np.hstack([X.todense(), formatted_first_layer_predictions])\n",
+    "\n",
+    "        # print(\"These are the extra features:\", formatted_first_layer_predictions)\n",
+    "        print(\"Summing the values:\", np.sum(np.sum(formatted_first_layer_predictions, axis=1)))\n",
+    "\n",
     "        print(f\"PREDICT: X_extended shape is {X_expanded.shape}\")\n",
     "        return self.second_layer_classifiers.predict(X_expanded)"
    ]
@@ -400,8 +410,9 @@
    ],
    "source": [
     "# first test\n",
-    "# m = DebuggingBasicStacking()\n",
-    "# m.fit(datasets[\"scene\"][\"X_train\"], datasets[\"scene\"][\"y_train\"])"
+    "\n",
+    "m = DebuggingBasicStacking()\n",
+    "m.fit(datasets[\"scene\"][\"X_train\"], datasets[\"scene\"][\"y_train\"])"
    ]
   },
   {
@@ -463,10 +474,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FIT: X shape is (1211, 294)\n",
+      "FIT: Summing the values: 1019\n",
+      "FIT: X_extended shape is (1211, 300)\n",
+      "PREDICT: X shape is (1196, 294)\n",
+      "Summing the values: 901\n",
+      "PREDICT: X_extended shape is (1196, 300)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<1196x6 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 901 stored elements in Compressed Sparse Column format>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# third test\n",
+    "\n",
+    "m = DebuggingBasicStacking()\n",
+    "m.fit(datasets[\"scene\"][\"X_train\"], datasets[\"scene\"][\"y_train\"])\n",
+    "m.predict(datasets[\"scene\"][\"X_test\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.002804844481145059"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1019/(1211 * 300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0025111482720178374"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "901/(1196 * 300)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -510,7 +591,18 @@
     "\n",
     "### Third test: check if the new features have values\n",
     "\n",
-    "...\n",
+    "```\n",
+    "FIT: X shape is (1211, 294)\n",
+    "FIT: Summing the values: 1019\n",
+    "FIT: X_extended shape is (1211, 300)\n",
+    "PREDICT: X shape is (1196, 294)\n",
+    "Summing the values: 901\n",
+    "PREDICT: X_extended shape is (1196, 300)\n",
+    "```\n",
+    "\n",
+    "The extended features really have values, and they are not all zeros. This is good. We can also see that they differ from `fit` to `predict`, which is also showing that we are _not_ doing a simple mistake such as using the same data in both places.\n",
+    "\n",
+    "The share of zeros, however, is quite large. For the `fit` phase, only 0.28% of the values have a value different from zero. For the `predict` phase, this share is 0.25%. This is quite bad, because it shows that the extra features are barely adding any information to the model.\n",
     "\n",
     "### Fourth test: attempt to use `Stacking` from scikit to reimplement the `BasicStacking`\n",
     "\n",
