describes stuff even more

--- a/8_debugging_the_basic_stacking_model.ipynb
+++ b/8_debugging_the_basic_stacking_model.ipynb
@@ -550,6 +550,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2585"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(np.sum(datasets[\"scene\"][\"y\"].todense(), axis=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2407, 6)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datasets[\"scene\"][\"y\"].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.17899182938651156"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2585/(2407 * 6)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -600,9 +660,13 @@
     "PREDICT: X_extended shape is (1196, 300)\n",
     "```\n",
     "\n",
-    "The extended features really have values, and they are not all zeros. This is good. We can also see that they differ from `fit` to `predict`, which is also showing that we are _not_ doing a simple mistake such as using the same data in both places.\n",
+    "**The extended features really have values, and they are not all zeros. This is good**. We can also see that they differ from `fit` to `predict`, which is also showing that we are _not_ doing a simple mistake such as using the same data in both places.\n",
     "\n",
     "The share of zeros, however, is quite large. For the `fit` phase, only 0.28% of the values have a value different from zero. For the `predict` phase, this share is 0.25%. This is quite bad, because it shows that the extra features are barely adding any information to the model.\n",
+    "\n",
+    "This is very far from the share of non-zeros found at the dataset, which is ~17%.\n",
+    "\n",
+    "Why is the fist layer doing so incredible bad at predicting the labels? **It might be worthy to check a pure `BinaryRelevance` output**.\n",
     "\n",
     "### Fourth test: attempt to use `Stacking` from scikit to reimplement the `BasicStacking`\n",
     "\n",
