runs more tests

--- a/8_debugging_the_basic_stacking_model.ipynb
+++ b/8_debugging_the_basic_stacking_model.ipynb
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,12 +357,12 @@
     "        super().__init__()\n",
     "\n",
     "        self.first_layer_classifiers = BinaryRelevance(\n",
-    "            classifier=SVC(),\n",
+    "            classifier=SVC(random_state=42),\n",
     "            require_dense=[False, True]\n",
     "        )\n",
     "\n",
     "        self.second_layer_classifiers = BinaryRelevance(\n",
-    "            classifier=SVC(),\n",
+    "            classifier=SVC(random_state=42),\n",
     "            require_dense=[False, True]\n",
     "        )\n",
     "    \n",
@@ -374,8 +374,8 @@
     "        formatted_first_layer_predictions = first_layer_predictions.todense()\n",
     "        X_expanded = np.hstack([X.todense(), formatted_first_layer_predictions])\n",
     "\n",
-    "        # print(\"FIT: These are the extra features:\", formatted_first_layer_predictions)\n",
-    "        print(\"FIT: Summing the values:\", np.sum(np.sum(formatted_first_layer_predictions, axis=1)))\n",
+    "        first_layer_sum = np.sum(np.sum(formatted_first_layer_predictions, axis=1))\n",
+    "        print(\"FIT: summing the values (for first layer):\", first_layer_sum)\n",
     "\n",
     "        print(f\"FIT: X_extended shape is {X_expanded.shape}\")\n",
     "        self.second_layer_classifiers.fit(X_expanded, y)\n",
@@ -387,11 +387,15 @@
     "\n",
     "        X_expanded = np.hstack([X.todense(), formatted_first_layer_predictions])\n",
     "\n",
-    "        # print(\"These are the extra features:\", formatted_first_layer_predictions)\n",
-    "        print(\"Summing the values:\", np.sum(np.sum(formatted_first_layer_predictions, axis=1)))\n",
-    "\n",
+    "        print(\"PREDICT: summing the values (for first layer):\", np.sum(np.sum(formatted_first_layer_predictions, axis=1)))\n",
     "        print(f\"PREDICT: X_extended shape is {X_expanded.shape}\")\n",
-    "        return self.second_layer_classifiers.predict(X_expanded)"
+    "\n",
+    "        second_layer_predictions = self.second_layer_classifiers.predict(X_expanded)\n",
+    "        formatted_second_layer_predictions = second_layer_predictions.todense()\n",
+    "\n",
+    "        print(\"PREDICT: summing the values (for second layer):\", np.sum(np.sum(formatted_second_layer_predictions, axis=1)))\n",
+    "\n",
+    "        return second_layer_predictions"
    ]
   },
   {
@@ -474,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +500,7 @@
        "\twith 901 stored elements in Compressed Sparse Column format>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,47 +515,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.002804844481145059"
+       "0.14024222405725295"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1019/(1211 * 300)"
+    "1019/(1211 * 6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0025111482720178374"
+       "0.12555741360089187"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "901/(1196 * 300)"
+    "901/(1196 * 6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -560,18 +564,21 @@
        "2585"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# -- checking amount of values found in the actual dataset\n",
+    "# that is, values for the labels\n",
+    "\n",
     "np.sum(np.sum(datasets[\"scene\"][\"y\"].todense(), axis=1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +587,7 @@
        "(2407, 6)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -600,13 +607,265 @@
        "0.17899182938651156"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "2585/(2407 * 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "901"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1196, 6)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# fourth test\n",
+    "\n",
+    "pure_br = BinaryRelevance(\n",
+    "    classifier=SVC(random_state=42),\n",
+    "    require_dense=[False, True]\n",
+    ")\n",
+    "\n",
+    "pure_br.fit(datasets[\"scene\"][\"X_train\"], datasets[\"scene\"][\"y_train\"])\n",
+    "preds = pure_br.predict(datasets[\"scene\"][\"X_test\"])\n",
+    "\n",
+    "display(np.sum(np.sum(preds.todense(), axis=1)))\n",
+    "display(preds.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.12555741360089187"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "901/(1196*6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "901"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1196, 6)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "pure_br = BinaryRelevance(\n",
+    "    classifier=SVC(random_state=94589045),\n",
+    "    require_dense=[False, True]\n",
+    ")\n",
+    "\n",
+    "pure_br.fit(datasets[\"scene\"][\"X_train\"], datasets[\"scene\"][\"y_train\"])\n",
+    "preds = pure_br.predict(datasets[\"scene\"][\"X_test\"])\n",
+    "\n",
+    "display(np.sum(np.sum(preds.todense(), axis=1)))\n",
+    "display(preds.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is really weird. Regardless of the `random_state`, the results are always the same. Let's try another base classifier."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "791"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1196, 6)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "rf_br = BinaryRelevance(\n",
+    "    classifier=RandomForestClassifier(random_state=42),\n",
+    "    require_dense=[False, True]\n",
+    ")\n",
+    "\n",
+    "rf_br.fit(datasets[\"scene\"][\"X_train\"], datasets[\"scene\"][\"y_train\"])\n",
+    "preds = rf_br.predict(datasets[\"scene\"][\"X_test\"])\n",
+    "\n",
+    "display(np.sum(np.sum(preds.todense(), axis=1)))\n",
+    "display(preds.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "811"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1196, 6)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "rf_br = BinaryRelevance(\n",
+    "    classifier=RandomForestClassifier(random_state=43434242),\n",
+    "    require_dense=[False, True]\n",
+    ")\n",
+    "\n",
+    "rf_br.fit(datasets[\"scene\"][\"X_train\"], datasets[\"scene\"][\"y_train\"])\n",
+    "preds = rf_br.predict(datasets[\"scene\"][\"X_test\"])\n",
+    "\n",
+    "display(np.sum(np.sum(preds.todense(), axis=1)))\n",
+    "display(preds.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "792"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1196, 6)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "rf_br = BinaryRelevance(\n",
+    "    classifier=RandomForestClassifier(),\n",
+    "    require_dense=[False, True]\n",
+    ")\n",
+    "\n",
+    "rf_br.fit(datasets[\"scene\"][\"X_train\"], datasets[\"scene\"][\"y_train\"])\n",
+    "preds = rf_br.predict(datasets[\"scene\"][\"X_test\"])\n",
+    "\n",
+    "display(np.sum(np.sum(preds.todense(), axis=1)))\n",
+    "display(preds.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FIT: X shape is (1211, 294)\n",
+      "FIT: summing the values (for first layer): 1019\n",
+      "FIT: X_extended shape is (1211, 300)\n",
+      "PREDICT: X shape is (1196, 294)\n",
+      "PREDICT: summing the values (for first layer): 901\n",
+      "PREDICT: X_extended shape is (1196, 300)\n",
+      "PREDICT: summing the values (for second layer): 901\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<1196x6 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 901 stored elements in Compressed Sparse Column format>"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = DebuggingBasicStacking()\n",
+    "m.fit(datasets[\"scene\"][\"X_train\"], datasets[\"scene\"][\"y_train\"])\n",
+    "m.predict(datasets[\"scene\"][\"X_test\"])"
    ]
   },
   {
@@ -662,13 +921,25 @@
     "\n",
     "**The extended features really have values, and they are not all zeros. This is good**. We can also see that they differ from `fit` to `predict`, which is also showing that we are _not_ doing a simple mistake such as using the same data in both places.\n",
     "\n",
-    "The share of zeros, however, is quite large. For the `fit` phase, only 0.28% of the values have a value different from zero. For the `predict` phase, this share is 0.25%. This is quite bad, because it shows that the extra features are barely adding any information to the model.\n",
+    "The share of zeros, however, is something to consider. For the `fit` phase, only 14% of the values have a value different from zero. For the `predict` phase, this share is 12%. Both values are less than the share found in the full dataset, which is around ~17%.\n",
     "\n",
-    "This is very far from the share of non-zeros found at the dataset, which is ~17%.\n",
+    "Is it possible that the \"stacking part\" is making the model drop its performance? **It might be worthy to check a pure `BinaryRelevance` output**.\n",
     "\n",
-    "Why is the fist layer doing so incredible bad at predicting the labels? **It might be worthy to check a pure `BinaryRelevance` output**.\n",
+    "At first, iy might be tempting to think that the problem is the dataset being used. But remember that in the first notebook, we conduct a very similar test, comparing the output of `BinaryRelevance` and `BasicStacking`, and the results were identical for all datasets tested.\n",
     "\n",
-    "### Fourth test: attempt to use `Stacking` from scikit to reimplement the `BasicStacking`\n",
+    "### Fourth test: testing a pure `BinaryRelevance` model\n",
+    "\n",
+    "~A pure `BinaryRelevance` manages to be _worse_ than the first layer of the `BasicStacking` model. This is really weird. It only gets 901 labels, instead of 1019.~ A pure `BinaryRelevance` is performing exactly equal to the first layer of the `BasicStacking`, which is actually expected. What is weird is that the number of labels found is exactly the same: 901. **What is weird is that both the first and second layer return the exact same number of labels, regardless of the extra features being added to the second layer.**\n",
+    "\n",
+    "Could it be something with the `random_stage`? **But even after changing the `random_state` to absurd numbers, the results are always the same**. This is totally weird. It is like `SVC` is caching the results or something like that. Or maybe `BinaryRelevance` is keeping a cache of some sort. This is weird, as the source code of `scikit-multilearn` does _not_ describe any cache. It uses `copy.deepcopy`. Maybe this function is the one doing the cache thing? I made a quick Google search about this, but I found nothing conclusive.\n",
+    "\n",
+    "Or maybe this is down to how `SVC` works. With all its default parameters, it really _is_ stopping at the same point. ~But why it finds more labels when being used via the `BasicStacking` model? This cannot be explained by the `SVC` internal workings alone.~ Actually it is finding the same quantity of labels. I made some confusion because I compared the labels found during `fit` to those found during `predict`. If I compare the labels from `predict` only, then the results are exactly the same.\n",
+    "\n",
+    "When using different base classifiers, such as the `RandomForestClassifier`, the results are different. **It finds _less_ labels than `SVC`, but at least the results differ when running with different `random_state`s**.\n",
+    "\n",
+    "Perhaps the way forward is to use `RandomForestClassifier` instead of `SVC` as the base classifier.\n",
+    "\n",
+    "### Fifth test: using `RandomForestClassifier` as the base classifier\n",
     "\n",
     "..."
    ]
