runs one more test

--- a/8_debugging_the_basic_stacking_model.ipynb
+++ b/8_debugging_the_basic_stacking_model.ipynb
@@ -345,24 +345,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import copy\n",
+    "\n",
     "class DebuggingBasicStacking(ProblemTransformationBase):\n",
     "    first_layer_classifiers: BinaryRelevance\n",
     "    second_layer_classifiers: BinaryRelevance\n",
     "\n",
-    "    def __init__(self, classifier: Any = None, require_dense: Optional[List[bool]] = None):\n",
+    "    def __init__(self, classifier: Any = SVC(), require_dense: Optional[List[bool]] = None):\n",
     "        super().__init__()\n",
     "\n",
+    "        first_base_classifier = copy.deepcopy(classifier)\n",
+    "        second_base_classifier = copy.deepcopy(classifier)\n",
+    "\n",
+    "        print(\"Same object check\", first_base_classifier is second_base_classifier)\n",
+    "\n",
     "        self.first_layer_classifiers = BinaryRelevance(\n",
-    "            classifier=SVC(random_state=42),\n",
+    "            classifier=first_base_classifier,\n",
     "            require_dense=[False, True]\n",
     "        )\n",
     "\n",
     "        self.second_layer_classifiers = BinaryRelevance(\n",
-    "            classifier=SVC(random_state=42),\n",
+    "            classifier=second_base_classifier,\n",
     "            require_dense=[False, True]\n",
     "        )\n",
     "    \n",
@@ -869,6 +876,82 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Same object check False\n",
+      "FIT: X shape is (1211, 294)\n",
+      "FIT: summing the values (for first layer): 1286\n",
+      "FIT: X_extended shape is (1211, 300)\n",
+      "PREDICT: X shape is (1196, 294)\n",
+      "PREDICT: summing the values (for first layer): 797\n",
+      "PREDICT: X_extended shape is (1196, 300)\n",
+      "PREDICT: summing the values (for second layer): 793\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<1196x6 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 793 stored elements in Compressed Sparse Column format>"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# fifth test\n",
+    "\n",
+    "m = DebuggingBasicStacking(classifier=RandomForestClassifier(random_state=42))\n",
+    "m.fit(datasets[\"scene\"][\"X_train\"], datasets[\"scene\"][\"y_train\"])\n",
+    "m.predict(datasets[\"scene\"][\"X_test\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Same object check False\n",
+      "FIT: X shape is (1211, 294)\n",
+      "FIT: summing the values (for first layer): 1286\n",
+      "FIT: X_extended shape is (1211, 300)\n",
+      "PREDICT: X shape is (1196, 294)\n",
+      "PREDICT: summing the values (for first layer): 791\n",
+      "PREDICT: X_extended shape is (1196, 300)\n",
+      "PREDICT: summing the values (for second layer): 792\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<1196x6 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 792 stored elements in Compressed Sparse Column format>"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = DebuggingBasicStacking(classifier=RandomForestClassifier(random_state=94389473))\n",
+    "m.fit(datasets[\"scene\"][\"X_train\"], datasets[\"scene\"][\"y_train\"])\n",
+    "m.predict(datasets[\"scene\"][\"X_test\"])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -941,7 +1024,13 @@
     "\n",
     "### Fifth test: using `RandomForestClassifier` as the base classifier\n",
     "\n",
-    "..."
+    "The usage of `RandomForestClassifier` show that, by using other base classifier, it is possible to achieve different results for the first and second layer. In this case, the `BasicStacking` really differs from the `BinaryRelevance` model, which is what we wanted to achieve in the first place.\n",
+    "\n",
+    "The results are still **not** that great, as even the `RandomForestClassifier` generate actually little difference from the first to the second layer.\n",
+    "\n",
+    "### Sixth test: use scikit's `StackingClassifier`\n",
+    "\n",
+    "### Seventh test: compare metrics to `StackingWithFTest` when alpha=1"
    ]
   },
   {
