adds next steps

--- a/8_debugging_the_basic_stacking_model.ipynb
+++ b/8_debugging_the_basic_stacking_model.ipynb
@@ -1030,7 +1030,15 @@
     "\n",
     "### Sixth test: use scikit's `StackingClassifier`\n",
     "\n",
-    "### Seventh test: compare metrics to `StackingWithFTest` when alpha=1"
+    "...\n",
+    "\n",
+    "### Seventh test: compare metrics to `StackingWithFTest` when alpha=1\n",
+    "\n",
+    "...\n",
+    "\n",
+    "### Eighth test: make sure that the `BasicStacking` expands all labels but the label being predicted\n",
+    "\n",
+    "..."
    ]
   },
   {
