--- a/8_debugging_the_basic_stacking_model.ipynb
+++ b/8_debugging_the_basic_stacking_model.ipynb
@@ -964,8 +964,13 @@
     "X_extended shape is (1211, 300)\n",
     "```\n",
     "\n",
-    "**So, the second layer is indeed receiving more features than the first layer. This is good.**\n",
-    "\n",
+    "**So, the second layer is indeed receiving more features than the first layer. This is good.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Second test: check if the base classifier itself is being trained with the new features\n",
     "\n",
     "The existing properties being set by `BinaryRelevance` already make it possible to investigate each classifier of either the first or the second layer.\n",
@@ -989,8 +994,13 @@
     "300\n",
     "```\n",
     "\n",
-    "**The base classifiers from the second layer are really receiving all the new features. This is good.**\n",
-    "\n",
+    "**The base classifiers from the second layer are really receiving all the new features. This is good.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Third test: check if the new features have values\n",
     "\n",
     "```\n",
@@ -1008,8 +1018,13 @@
     "\n",
     "Is it possible that the \"stacking part\" is making the model drop its performance? **It might be worthy to check a pure `BinaryRelevance` output**.\n",
     "\n",
-    "At first, iy might be tempting to think that the problem is the dataset being used. But remember that in the first notebook, we conduct a very similar test, comparing the output of `BinaryRelevance` and `BasicStacking`, and the results were identical for all datasets tested.\n",
-    "\n",
+    "At first, iy might be tempting to think that the problem is the dataset being used. But remember that in the first notebook, we conduct a very similar test, comparing the output of `BinaryRelevance` and `BasicStacking`, and the results were identical for all datasets tested."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Fourth test: testing a pure `BinaryRelevance` model\n",
     "\n",
     "~A pure `BinaryRelevance` manages to be _worse_ than the first layer of the `BasicStacking` model. This is really weird. It only gets 901 labels, instead of 1019.~ A pure `BinaryRelevance` is performing exactly equal to the first layer of the `BasicStacking`, which is actually expected. What is weird is that the number of labels found is exactly the same: 901. **What is weird is that both the first and second layer return the exact same number of labels, regardless of the extra features being added to the second layer.**\n",
@@ -1020,14 +1035,24 @@
     "\n",
     "When using different base classifiers, such as the `RandomForestClassifier`, the results are different. **It finds _less_ labels than `SVC`, but at least the results differ when running with different `random_state`s**.\n",
     "\n",
-    "Perhaps the way forward is to use `RandomForestClassifier` instead of `SVC` as the base classifier.\n",
-    "\n",
+    "Perhaps the way forward is to use `RandomForestClassifier` instead of `SVC` as the base classifier."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Fifth test: using `RandomForestClassifier` as the base classifier\n",
     "\n",
     "The usage of `RandomForestClassifier` show that, by using other base classifier, it is possible to achieve different results for the first and second layer. In this case, the `BasicStacking` really differs from the `BinaryRelevance` model, which is what we wanted to achieve in the first place.\n",
     "\n",
-    "The results are still **not** that great, as even the `RandomForestClassifier` generate actually little difference from the first to the second layer.\n",
-    "\n",
+    "The results are still **not** that great, as even the `RandomForestClassifier` generate actually little difference from the first to the second layer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Sixth test: use scikit's `StackingClassifier`\n",
     "\n",
     "...\n",
@@ -1040,11 +1065,6 @@
     "\n",
     "..."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
